--- a/.env
+++ b/.env
@@ -26,3 +26,5 @@ CLOUDINARY_UPLOAD_PRESET=unsigned
 # Application URLs
 STORE_URL=http://localhost:3000
 ADMIN_URL=http://localhost:3000/admin
+# API_BASE_URL is used for uploaded image URLs - update for production!
+API_BASE_URL=https://market.southadriaticskills.org
