--- a/.env
+++ b/.env
@@ -24,7 +24,7 @@ CLOUDINARY_API_SECRET=u6Sx3XlLEwNCcGXfuCJu1zRgP2A
 CLOUDINARY_UPLOAD_PRESET=unsigned
 
 # Application URLs
-STORE_URL=http://localhost:3000
-ADMIN_URL=http://localhost:3000/admin
+STORE_URL=https://market.southadriaticskills.org
+ADMIN_URL=https://market.southadriaticskills.org/admin
 # API_BASE_URL is used for uploaded image URLs - update for production!
 API_BASE_URL=https://market.southadriaticskills.org
